--- a/TMR.html
+++ b/TMR.html
@@ -984,19 +984,7 @@
         <!-- TODO PANEL (LEFT SIDE - Desktop only) -->
         <div class="todo-panel">
             <h3>To Do</h3>
-            <div class="todo-input-row">
-                <input id="todo-input" type="text" placeholder="Add a todo..." />
-                <div style="display: flex; gap: 6px; align-items: center;">
-                    <select id="todo-reminder-type" style="padding: 10px 8px; border: 2px solid #e0e0e0; border-radius: 6px; font-size: 14px;">
-                        <option value="none">No reminder</option>
-                        <option value="minutes">In minutes</option>
-                        <option value="time">At time</option>
-                    </select>
-                    <input id="todo-modal-minutes" type="number" min="0" placeholder="min" style="width: 60px; padding: 10px 8px; border: 2px solid #e0e0e0; border-radius: 6px; display: none;" />
-                    <input id="todo-reminder-time" type="time" style="padding: 10px 8px; border: 2px solid #e0e0e0; border-radius: 6px; display: none;" />
-                </div>
-                <button id="add-todo" class="small-tmr-btn">Add</button>
-            </div>
+            <button id="desktop-create-todo-btn" class="small-tmr-btn" style="width: 100%; padding: 12px; margin-bottom: 12px; font-size: 16px;">+ Create Todo</button>
             <ul id="todo-list" class="todo-list" aria-live="polite"></ul>
         </div>
 
@@ -1172,6 +1160,60 @@
                     <button id="todo-modal-add" class="small-tmr-btn">Add</button>
                 </div>
                 <ul id="todo-modal-list" class="todo-list"></ul>
+            </div>
+        </div>
+
+        <!-- DESKTOP VIEW TODO MODAL -->
+        <div id="todo-view-modal-backdrop" class="todo-modal-backdrop" style="display: none;">
+            <div class="todo-modal" role="dialog" aria-modal="true" aria-labelledby="todo-view-modal-title">
+                <h3 id="todo-view-modal-title">View Todo</h3>
+                <div style="padding: 16px; background: #f9f9f9; border-radius: 8px;">
+                    <div style="margin-bottom: 16px;">
+                        <strong>Title:</strong>
+                        <p id="todo-view-title" style="margin: 8px 0; font-size: 16px;"></p>
+                    </div>
+                    <div style="margin-bottom: 16px;">
+                        <strong>Notes:</strong>
+                        <p id="todo-view-notes" style="margin: 8px 0; font-size: 14px; white-space: pre-wrap; color: #555;"></p>
+                    </div>
+                    <div style="display: flex; gap: 8px; justify-content: flex-end;">
+                        <button id="todo-view-edit-btn" class="small-tmr-btn">Edit</button>
+                        <button id="todo-view-close-btn" class="small-tmr-btn">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- DESKTOP CREATE/EDIT TODO MODAL -->
+        <div id="todo-create-edit-modal-backdrop" class="todo-modal-backdrop" style="display: none;">
+            <div class="todo-modal" role="dialog" aria-modal="true" aria-labelledby="todo-create-edit-modal-title">
+                <h3 id="todo-create-edit-modal-title">Create Todo</h3>
+                <div style="padding: 16px; display: flex; flex-direction: column; gap: 12px;">
+                    <div>
+                        <label for="todo-edit-title" style="display: block; font-weight: bold; margin-bottom: 4px;">Title *</label>
+                        <input id="todo-edit-title" type="text" placeholder="Enter todo title..." style="width: 100%; padding: 10px 8px; border: 2px solid #e0e0e0; border-radius: 6px; box-sizing: border-box;" />
+                    </div>
+                    <div>
+                        <label for="todo-edit-notes" style="display: block; font-weight: bold; margin-bottom: 4px;">Notes</label>
+                        <textarea id="todo-edit-notes" placeholder="Add detailed notes..." style="width: 100%; padding: 10px 8px; border: 2px solid #e0e0e0; border-radius: 6px; min-height: 100px; box-sizing: border-box; font-family: inherit;"></textarea>
+                    </div>
+                    <div style="border-top: 1px solid #e0e0e0; padding-top: 12px;">
+                        <label style="display: block; font-weight: bold; margin-bottom: 8px;">Reminder</label>
+                        <div style="display: flex; gap: 6px; align-items: center; flex-wrap: wrap;">
+                            <select id="todo-edit-reminder-type" style="padding: 10px 8px; border: 2px solid #e0e0e0; border-radius: 6px; font-size: 14px;">
+                                <option value="none">No reminder</option>
+                                <option value="minutes">In minutes</option>
+                                <option value="time">At time</option>
+                            </select>
+                            <input id="todo-edit-reminder-minutes" type="number" min="0" placeholder="minutes" style="width: 80px; padding: 10px 8px; border: 2px solid #e0e0e0; border-radius: 6px; display: none;" />
+                            <input id="todo-edit-reminder-time" type="time" style="padding: 10px 8px; border: 2px solid #e0e0e0; border-radius: 6px; display: none;" />
+                        </div>
+                    </div>
+                    <div style="border-top: 1px solid #e0e0e0; padding-top: 12px; display: flex; gap: 8px; justify-content: flex-end;">
+                        <button id="todo-edit-save-btn" class="small-tmr-btn">Save</button>
+                        <button id="todo-edit-cancel-btn" class="small-tmr-btn">Cancel</button>
+                    </div>
+                </div>
             </div>
         </div>
 
